<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.sale.SaleFragment">


    <TextView
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please enter an amount"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvSaleAmount"
        app:layout_constraintEnd_toEndOf="@+id/tvSaleAmount"
        app:layout_constraintStart_toStartOf="@+id/tvSaleAmount" />

    <TextView
        android:id="@+id/tvSaleAmount"
        style="@style/TextAppearance.MaterialComponents.Headline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="$ 0.00"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toEndOf="@+id/linearLayoutCompat"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSaleNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/layout_soft_keyboard" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaleNext"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_next_button"
        android:text="Next"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayoutCompat"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>