<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_sale"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_refund"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_refund" />
</menu>